--- a/tools/Rmd/setup_models_1.Rmd
+++ b/tools/Rmd/setup_models_1.Rmd
@@ -40,15 +40,15 @@ assembly of whole chromosomes
 Na <- 1e+4 # ancestral N
 N1 <- c(Na / 10, 10 * Na) # current N
 N2 <- c(N1, Na)
-t <- 100000 # in generations
+t <- 250000 # in generations
 
 options(digits=16)
 
 # rounding is required so that directory names don't diverge due to precision
-lookup_u <- round(seq_log(from=4e-9, to=1e-8, length.out=15), digits=10)
+lookup_u <- round(seq_log(from=4e-9, to=1e-8, length.out=20), digits=10)
 lookup_r <- round(sort(c(seq_log(from=1e-8, to=1e-3, length.out=20),
                   seq(from=1e-4, to=1e-2, length.out=20))), digits=10)
-lookup_s <- round(-sort(c(seq_log(from=1e-5, to=1e-4, length.out=10), 
+lookup_s <- round(-sort(c(seq_log(from=1e-5, to=1e-4, length.out=20), 
                    seq_log(from=7.5e-5, to=1e-3, length.out=60))), digits=10)
 
 # for discretizing Gamma distributions
@@ -236,7 +236,12 @@ do
 	      a=$(echo "scale=10; 2 * $N * $s - 5" | bc)
 	      b=${a%.*}
 	      z=$(($b * -1))
-        momentspp params=opt.bpp F=$f O=$z > /dev/null
+	      if [[ $z -gt 25 ]]
+	      then
+          momentspp params=opt.bpp F=$f O=$z > /dev/null
+        else
+          momentspp params=opt.bpp F=$f O=25 > /dev/null
+        fi
       done
       cd ..
     done
@@ -264,7 +269,7 @@ lookup_u <- unique(params$lookup_u)
 
 n_models <- nrow(params)
 t <- unique(params$t)
-sampling_times <- seq(from=t, to=0, by=-1000)
+sampling_times <- seq(from=t, to=0, by=-250)
 
 # Het stats over time
 hrs <- as.data.frame(matrix(nrow=n_models, ncol=length(sampling_times)))
